name:                rsdlsb
version:             0.1.0.0
synopsis:            Raveline's SDL Sandbox
description:         Please see README.md
homepage:            http://github.com/githubuser/rsdlsb#readme
license:             BSD3
license-file:        LICENSE
author:              Raveline
maintainer:          example@example.com
copyright:           2015 Raveline
category:            Library
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Rsdlsb.Init
  build-depends:       base >= 4.7 && < 5
                     , sdl2
                     , sdl2-image
  default-language:    Haskell2010

executable rsdlsb-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , rsdlsb
  default-language:    Haskell2010

test-suite rsdlsb-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , rsdlsb
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/raveline/rsdlsb
